--- a/style.css
+++ b/style.css
@@ -22,3 +22,34 @@ body {
   border-radius: 25px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
 }
+
+.left-info {
+  width: 260px;
+  height: 100%;
+  float: left;
+  display: flex;
+  border-radius: 25px;
+  justify-content: center;
+  background: url("1.jpg");
+  background-position: center;
+  background-size: cover;
+  transform: scale(1.03) perspective(200px);
+  cursor: pointer;
+  box-shadow: 0 0 20px -10px rrgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease;
+}
+
+.left-info:hover {
+  transform: scale(1.1) perspective(2500px) rotateY(5deg);
+}
+
+.pic-gradient {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: linear-gradient(135deg, #5c6bc0 10%, #0d47a1 100%);
+  border-radius: 25px;
+  opacity: 0.5;
+}
