--- a/style.css
+++ b/style.css
@@ -53,3 +53,23 @@ body {
   border-radius: 25px;
   opacity: 0.5;
 }
+
+.today-info {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  margin-top: 25px;
+}
+
+.today-weather {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  bottom: 20px;
+  left: 20px;
+}
+
+.today-weather .bx {
+  font-size: 4.6rem;
+}
