--- a/style.css
+++ b/style.css
@@ -73,3 +73,21 @@ body {
 .today-weather .bx {
   font-size: 4.6rem;
 }
+
+.weather-temp {
+  font-weight: 700;
+  font-size: 3.5rem;
+}
+
+.right-info {
+  float: right;
+  position: relative;
+  height: 100%;
+  padding-top: 25px;
+}
+
+.day-info {
+  padding: 25px 35px;
+  display: flex;
+  flex-direction: column;
+}
